[package]
authors = ["John Spurlock <john@skymethod.com>"]
edition = "2021"
name    = "kv-connect-kit-napi"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = {version="2", features=["async"]}
napi-derive = "2"
denokv_sqlite = { git = "https://github.com/denoland/denokv.git", package="denokv_sqlite" }
denokv_proto = { git = "https://github.com/denoland/denokv.git", package="denokv_proto" }
rand = "0.8.5"
rand_distr = "0.3.0"
tokio = { version = "1.33.0", features = ["full"] }
anyhow = "1"
prost = "0.11"
once_cell = "1.18.0"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
